--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/jenneration/Employee-Tracker#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "console.table": "^0.10.0",
+    "figlet": "^1.5.0",
     "inquirer": "^7.3.3",
     "mysql": "^2.18.1"
   }
